# duckdb

./: .gitignore  ivm_compiled_queries_example_count.sql  ivm_compiled_queries_product_sales.sql  ivm_index_example_count.sql  ivm_index_product_sales.sql  ivm_system_tables.sql  query_film.sql  query_groups.sql  test.csv  test.db.wal
extension/client/: CMakeLists.txt  README.md  client.config  client_extension.cpp  client_functions.cpp  cpu_log.py  flush.py  generate_random_data_runs.cpp  plot.R  results_daily_runs_city.csv  results_runs.csv  tables.sql  test_centralized.py  test_common.py  test_decentralized.py  test_parameters.py  test_runs.py  test_runs_duckdb.py  test_runs_sqlite.py  test_runs_sqlite_centralized.py  test_runs_sqlite_common.py  test_runs_sqlite_decentralized.py  test_runs_sqlite_parameters.py
extension/client/ansible_scripts/: instructions.txt  playbook.yml
extension/client/ansible_scripts/terraform/: main.tf
extension/client/include/: client_extension.hpp  client_functions.hpp  generate_random_data_runs.hpp
extension/client/results/: cpu_centralized_10.csv  cpu_centralized_30.csv  cpu_decentralized.csv  results_daily_runs_city.csv  results_daily_runs_city_3.csv  results_daily_runs_city_min_agg_100_90.csv  results_daily_runs_city_min_agg_100_all.csv  results_daily_runs_city_min_agg_2_all.csv  results_daily_runs_city_refresh_2_min_agg_100.csv  results_daily_runs_city_refresh_4_min_agg_100.csv  results_daily_runs_city_window_12_min_agg_100.csv  results_daily_runs_city_window_6_min_agg_100.csv  results_runs_1.csv  results_runs_3.csv
extension/client/sql_scripts/: cleanup.sql  create_tables_server.sql  ivm_compiled_queries_client.sql  ivm_system_tables_client.sql  ivm_upsert_queries_client.sql  sidra_centralized_view_activity_metrics_flush.sql  sidra_centralized_view_daily_runs_user_flush.sql
extension/client/sqlite_scripts/: cleanup.sql  create_tables_server.sql  ivm_compiled_queries_client.sql  ivm_compiled_queries_daily_runs_city.sql  ivm_compiled_queries_runs.sql  ivm_index_daily_runs_city.sql  ivm_system_tables.sql  ivm_upsert_queries_client.sql  ivm_upsert_queries_daily_runs_city.sql  rdda_centralized_view_runs_flush.sql  sidra_centralized_view_activity_metrics_flush.sql
extension/compiler/: CMakeLists.txt  compiler_extension.cpp  compiler_library.cpp  data_representation.cpp  generate_python_script.cpp  logical_plan_to_sql.cpp  logical_plan_to_string.cpp
extension/compiler/include/: compiler_extension.hpp  compiler_library.hpp  data_representation.hpp  logical_plan_to_sql.hpp  logical_plan_to_string.hpp
extension/compiler/include/ivm/: ivm_compile_upsert.hpp
extension/compiler/include/openivm/: openivm_compile_upsert.hpp
extension/compiler/include/rdda/: generate_python_script.hpp  rdda_helpers.hpp  rdda_parse_select.hpp  rdda_parse_table.hpp  rdda_parse_view.hpp
extension/compiler/ivm/: ivm_compile_upsert.cpp
extension/compiler/openivm/: openivm_compile_upsert.cpp
extension/compiler/rdda/: rdda_parse_select.cpp  rdda_parse_table.cpp  rdda_parse_view.cpp
extension/differential_privacy/: CMakeLists.txt  differential_privacy_extension.cpp  dp_parser.cpp
extension/differential_privacy/include/: differential_privacy_extension.hpp  dp_parser.hpp
extension/ivm/: CMakeLists.txt  ivm_benchmark.cpp  ivm_cross_system_benchmark.cpp  ivm_cross_system_demo.cpp  ivm_extension.cpp  ivm_groups_benchmark.cpp  ivm_lineitem_benchmark.cpp  ivm_parser.cpp  ivm_upsert.cpp
extension/ivm/include/: ivm_benchmark.hpp  ivm_cross_system_demo.hpp  ivm_extension.hpp  ivm_insert_rule.hpp  ivm_parser.hpp  ivm_rewrite_rule.hpp  ivm_upsert.hpp
extension/openivm/: CMakeLists.txt  IVM Benchmarks.md  README.md  join_examples.sql  openivm_benchmark.cpp  openivm_cross_system_benchmark.cpp  openivm_cross_system_demo.cpp  openivm_extension.cpp  openivm_groups_benchmark.cpp  openivm_index_regen.cpp  openivm_joins_benchmark.cpp  openivm_lineitem_benchmark.cpp  openivm_parser.cpp  openivm_rewrite_rule.cpp  openivm_upsert.cpp  postgres_example.sql  postgres_example_count.sql  postgres_example_filter.sql
extension/openivm/include/: openivm_benchmark.hpp  openivm_cross_system_demo.hpp  openivm_extension.hpp  openivm_index_regen.hpp  openivm_insert_rule.hpp  openivm_parser.hpp  openivm_rewrite_rule.hpp  openivm_upsert.hpp
extension/openivm/tests/: ivm.test  ivm_filter.test  ivm_groupby.test  ivm_issue2.test
extension/postgres_scanner/: CMakeLists.txt  postgres_utils.cpp
extension/postgres_scanner/include/: postgres_utils.hpp
extension/postgres_scanner/include/storage/: postgres_connection_pool.hpp
extension/postgres_scanner/storage/: postgres_schema_entry.cpp
extension/server/: CMakeLists.txt  centralized_view_optimizer_rule.cpp  common.cpp  flush_function.cpp  rdda_parser.cpp  rdda_parser_helper.cpp  run_server.cpp  server.config  server_extension.cpp  tables.sql  test_runs_postgres.sql  test_scripts.sql  update_metrics.cpp
extension/server/include/: centralized_view_optimizer_rule.hpp  common.hpp  flush_function.hpp  rdda_parser.hpp  rdda_parser_helper.hpp  run_server.hpp  server_extension.hpp  update_metrics.hpp
src/include/duckdb/main/: config.hpp
src/main/: config.cpp  extension.cpp
src/main/extension/: extension_load.cpp
src/optimizer/: column_lifetime_analyzer.cpp
